fix: play.google.com submenu unreadable items

--- a/css/play.google.com.css
+++ b/css/play.google.com.css
@@ -16,6 +16,7 @@
     background: #1b1b1b !important;
     border: 1px solid #1b1b1b !important;
   }
+  .WtH9qd,
   .ac-row,
   .gbqfif,
   .gbqfsf,
